--- a/module-1/sml-1-conceptual-overview.qmd
+++ b/module-1/sml-1-conceptual-overview.qmd
@@ -157,7 +157,7 @@ This *predictive goal* means that we can do things differently:
   - Cluster analysis and Latent Profile Analysis
   - [Principle Components Analysis (really!)](https://web.stanford.edu/~hastie/ElemStatLearn/)
 
-# What technique should I choose?
+## Which technique should I choose?
 
 Do you have coded data or data with a known outcome -- let's say about K-12 students -- and, do you want to:
 
@@ -167,7 +167,7 @@ Do you have coded data or data with a known outcome -- let's say about K-12 stud
 
 **Supervised methods may be your best bet**
 
-# What technique should I choose?
+## Which technique should I choose?
 
 Do you not yet have codes/outcomes -- and do you want to?
 
@@ -186,7 +186,194 @@ Do you want to say something about one or several variables' relations with an o
 
 **Traditional, inferential statistics *i.e., regression* may be best**
 
-## Example of supervised machine learning in STEM Ed Research
+## How do I select a model?
+
+One general principle is to **start with the simplest useful model** and to _build toward
+more complex models as helpfuL_.
+
+This principle applies in multiple ways:
+
+- To choose an algorithm, start with simpler models that you can efficiently use and understand
+- To carry out feature engineering, understand your predictors well by starting with a subset
+- To tune an algorithm, start with a relatively simple set of tuning parameters
+
+This isn't just for beginners or science education researchers; [most spam filters use Support Vector Machines (and used Naive Bayes until recently)](https://vas3k.com/blog/machine_learning/) due to their combination of effectiveness and efficiency "in production."
+
+## What's stopping me from specifying a complex model?
+
+- Nothing too much, apart from computing power, time, and concerns of 
+- A "check" on your work is your predictions on _test_ set data
+  - *Train data*: Coded/outcome data that you use to train ("estimate") your model
+  - *Validation data<sup>1</sup>*: Data you use to select a particular algorithm
+  - *Test ("hold-out") data*: Data that you do not use in any way to train your data
+
+- An important way to achieve good performance with test data is to balance between the inherent _bias_ in your algorithm and the _variance_ in the predictions of your algorithm; this is referred to as the **bias-variance** trade-off of _all_ models
+
+.footnote[
+[1] not always/often used, for reasons we'll discuss later
+
+]
+
+## Illustrating the bias-variance tradeoff
+
+```{r, echo = FALSE, fig.align="center", message = FALSE}
+library(ggplot2)
+
+set.seed(5)
+dat = data.frame(x = runif(1000, 0, 12))
+dat$x = sort(dat$x)
+dat$y = with(dat, sin(x * 1.3) * 15 + 3 * (x - 4)^2)
+sigma = with(dat, (exp(x - 5)/(1 + exp(x - 5)) - exp(x - 7)/(1 + exp(x - 7)) * 
+    2) + 1.4) * 6
+dat$yobs = dat$y + rnorm(nrow(dat), mean = 0, sd = sigma)
+
+ggplot(dat, aes(x = x, y = yobs)) +
+  geom_point(color = "darkgray") +
+  ylab("pred")
+
+ggsave("img/bias-variance-data-1.png")
+```
+
+## A strongly biased algorithm (linear model)
+
+```{r, echo = FALSE, fig.align="center", message = FALSE}
+dat = data.frame(x = runif(1000, 0, 12))
+dat$x = sort(dat$x)
+dat$y = with(dat, sin(x * 1.3) * 15 + 3 * (x - 4)^2)
+sigma = with(dat, (exp(x - 5)/(1 + exp(x - 5)) - exp(x - 7)/(1 + exp(x - 7)) * 
+    2) + 1.4) * 6
+dat$yobs = dat$y + rnorm(nrow(dat), mean = 0, sd = sigma)
+
+ggplot(dat, aes(x = x, y = yobs)) +
+  geom_point(color = "darkgray") +
+  geom_smooth(method = "lm") +
+  ylab("pred")
+
+ggsave("img/bias-variance-data-3.png")
+```
+
+## A much less-biased algorithm (GAM/spline)
+
+```{r, echo = FALSE, fig.align="center", message = FALSE}
+set.seed(5)
+dat = data.frame(x = runif(1000, 0, 12))
+dat$x = sort(dat$x)
+dat$y = with(dat, sin(x * 1.3) * 15 + 3 * (x - 4)^2)
+sigma = with(dat, (exp(x - 5)/(1 + exp(x - 5)) - exp(x - 7)/(1 + exp(x - 7)) * 
+    2) + 1.4) * 6
+dat$yobs = dat$y + rnorm(nrow(dat), mean = 0, sd = sigma)
+
+ggplot(dat, aes(x = x, y = yobs)) +
+  geom_point(color = "darkgray") +
+  geom_smooth(method = lm, formula = y ~ splines::bs(x, 10), se = FALSE) +
+  ylab("pred")
+
+ggsave("img/bias-variance-data-5.png")
+```
+
+## Slightly different data (right pane)
+
+```{r, echo = FALSE, echo = FALSE, message = FALSE, include = FALSE}
+dat = data.frame(x = runif(1000, 0, 12))
+dat$x = sort(dat$x)
+dat$y = with(dat, sin(x * 2.3) * 25 + 3 * (x - 3)^2)
+sigma = with(dat, (exp(x - 5)/(1 + exp(x - 5)) - exp(x - 7)/(1 + exp(x - 7)) * 
+    2) + 1.4) * 6
+dat$yobs = dat$y + rnorm(nrow(dat), mean = 0, sd = sigma)
+
+ggplot(dat, aes(x = x, y = yobs)) +
+  geom_point(color = "darkgray") +
+  ylab("pred")
+
+ggsave("img/bias-variance-data-2.png")
+```
+
+::: {.pull-left}
+![Bias Variance Data 1](img/bias-variance-data-1.png){width=900}
+:::
+
+::: {.pull-right}
+![Bias Variance Data 2](img/bias-variance-data-2.png){width=900}
+
+:::
+
+## Still strong bias, but low variance
+
+```{r, echo = FALSE, fig.align="center", message = FALSE, include = FALSE}
+dat = data.frame(x = runif(1000, 0, 12))
+dat$x = sort(dat$x)
+dat$y = with(dat, sin(x * 2.3) * 25 + 3 * (x - 3)^2)
+sigma = with(dat, (exp(x - 5)/(1 + exp(x - 5)) - exp(x - 7)/(1 + exp(x - 7)) * 
+    2) + 1.4) * 6
+dat$yobs = dat$y + rnorm(nrow(dat), mean = 0, sd = sigma)
+
+ggplot(dat, aes(x = x, y = yobs)) +
+  geom_point(color = "darkgray") +
+  geom_smooth(method = "lm") +
+  ylab("pred")
+
+ggsave("img/bias-variance-data-4.png")
+```
+
+::: {.pull-left}
+![Bias Variance Data 3](img/bias-variance-data-3.png){width=900}
+:::
+
+::: {.pull-right}
+![Bias Variance Data 4](img/bias-variance-data-4.png){width=900}
+:::
+
+## Low bias, but very high variance
+
+```{r, echo = FALSE, fig.align="center", message = FALSE, include = FALSE}
+dat = data.frame(x = runif(1000, 0, 12))
+dat$x = sort(dat$x)
+dat$y = with(dat, sin(x * 2.3) * 25 + 3 * (x - 3)^2)
+sigma = with(dat, (exp(x - 5)/(1 + exp(x - 5)) - exp(x - 7)/(1 + exp(x - 7)) * 
+    2) + 1.4) * 6
+dat$yobs = dat$y + rnorm(nrow(dat), mean = 0, sd = sigma)
+
+ggplot(dat, aes(x = x, y = yobs)) +
+  geom_point(color = "darkgray") +
+  geom_smooth(method = lm, formula = y ~ splines::bs(x, 10), se = FALSE) +
+  ylab("pred")
+
+ggsave("img/bias-variance-data-6.png")
+```
+
+::: {.pull-left}
+![Bias Variance Data 5](img/bias-variance-data-5.png){width=900}
+:::
+
+::: {.pull-right}
+![Bias Variance Data 6](img/bias-variance-data-6.png){width=900}
+:::
+
+## The bias-variance tradeoff
+
+.pull-left[
+
+::: {.pull-left}
+#### Bias
+
+- *Definition*: Difference between our known codes/outcomes and our predicted codes/outcomes; difference between $y$ and $\hat{y}$
+- How (in)correct our models' (algorithms') predictions are
+- Models with high bias can fail to capture important relationships—they can be *under-fit* to our data
+- In short, how well our model reflects the patterns in the data
+:::
+
+::: {.pull-right}
+#### Variance
+
+- *Definition*: Using a different sample of data, the difference in $\hat{y}$ values
+- How sensitive our predictions are to the specific sample on which we trained the model
+- Models with high variance can fail to predict different data well—they can be *over-fit* to our data
+- In short, how stable the predictions of our model are
+:::
+
+#### <center>Regardless of model, we often wish to balance between bias and variance—to balance between under- and over-fitting a model to our data</center>
+
+## Examples
 
 **Combining best practices in assessment with supervised ML**
 
@@ -247,10 +434,11 @@ A key point to make here is that each lab introduces a tension/issue that is res
 
 # Other parts of this module
 
-## Overview
-
 ::: panel-tabset
 
+### Code-along
+
+Using *built-in* data
 ### Readings
 
 **Please see `sml-1-readings.qmd`**
